# internal-docs-qa-pipeline

./: README.md  part-a-system-design.md  part-c-reflection.md
part-b-implementation/: .gitignore  README.md  pyproject.toml  requirements.txt
part-b-implementation/artifacts/: baseline_classification_report.txt  candidate_classification_report.txt  dataset_manifest.json  metrics.json  promotion.json
part-b-implementation/data/raw/: skillsfuture_unique_skills.csv
part-b-implementation/src/skill_emerging_pipeline/: __init__.py  data.py  train.py
part-b-implementation/tests/: test_data.py
