[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-emerging-pipeline"
version = "0.1.0"
description = "Minimal reproducible training pipeline for emerging skill classification."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
